fixed, what I think was a merge error, showInsert changed to showFinalize

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -354,7 +354,7 @@
 			<img src="pages/images/output.svg" width="20">
 		</div>
 	</div>
-	<div id="menu-right" class="menu-right" ng-class="{ 'open' : showInsertOptions || showOutput }">
+	<div id="menu-right" class="menu-right" ng-class="{ 'open' : showFinalizeOptions || showOutput }">
 		<div id="menu-right-content" class="content">
 			<div class="menu-item-right inserts" ng-show="showFinalizeOptions">
 				<div class="menu-content">
