removed compile from document manager #347

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -322,7 +322,7 @@
 				</div>
 				<div ng-show="showBottomOptions">
 					<input type="checkbox" ng-model="user.showArchivedDocuments" ng-change="updateUser();">Show Archived Documents<br>
-					<a ng-click="">Compile</a>
+					<!--<a ng-click="">Compile</a>-->
 				</div>
 			</div>
 		</div>
