removed new folder link #346

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -312,7 +312,7 @@
 			<div class="options-bottom-box">
 				<div ng-show="showNewOptions">
 					<a ng-click="addProjectDocument()">New Document</a><br>
-					<a ng-click="">New Folder</a>
+					<!--<a ng-click="">New Folder</a>-->
 				</div>
 				<div ng-show="showImportOptions">
 					<div class="upload-box" ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="dragover"
