all insert/finalize function-buttons should work for the complete button #342

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -120,20 +120,14 @@
 			<div class="menu-item-left inserts" ng-show="showInsert">
 				<div class="menu-content">
 					<ul>
-						<!--<li class="insertOption" ng-class="{ 'expanded' : activeInsertOption === 'showInsertBoxOptions' }">
-							<a ng-click="insertOptionChosen('showInsertBoxOptions');">
-								<img src="pages/images/insert_box_button.png" width="80" height="80" />
-							</a>
+						<!--<li ng-click="insertOptionChosen('showInsertBoxOptions');" class="insertOption" ng-class="{ 'expanded' : activeInsertOption === 'showInsertBoxOptions' }">
+							<img src="pages/images/insert_box_button.png" width="80" height="80" />
 						</li>-->
-						<li class="insertOption" ng-class="{ 'expanded' : activeInsertOption === 'showInsertHyperlinkOptions' }">
-							<a ng-click="insertOptionChosen('showInsertHyperlinkOptions');">
-								<img src="pages/images/insert_hyperlink_button.png" width="80" height="80" />
-							</a>
+						<li ng-click="insertOptionChosen('showInsertHyperlinkOptions');" class="insertOption" ng-class="{ 'expanded' : activeInsertOption === 'showInsertHyperlinkOptions' }">
+							<img src="pages/images/insert_hyperlink_button.png" width="80" height="80" />
 						</li>
-						<li class="insertOption" ng-class="{ 'expanded' : activeInsertOption === 'showInsertImageOptions' }">
-							<a ng-click="insertOptionChosen('showInsertImageOptions');">
-								<img src="pages/images/insert_image_button.png" width="80" height="80" />
-							</a>
+						<li ng-click="insertOptionChosen('showInsertImageOptions');" class="insertOption" ng-class="{ 'expanded' : activeInsertOption === 'showInsertImageOptions' }">
+							<img src="pages/images/insert_image_button.png" width="80" height="80" />
 						</li>
 						<!--<li class="insertOptionProperties" ng-class="{ 'expanded' : activeInsertOption === 'showInsertBoxOptions' }">
 							line properties
@@ -221,15 +215,11 @@
 							</div>-->
 						</li>
 
-						<li class="insertOption" ng-class="{ 'expanded' : activeInsertOption === 'showInsertPagebreakOptions' }">
-							<a ng-click="insertOptionChosen('showInsertPagebreakOptions');">
-								<img src="pages/images/insert_pagebreak_button.png" width="80" height="80" />
-							</a>
+						<li ng-click="insertOptionChosen('showInsertPagebreakOptions');" class="insertOption" ng-class="{ 'expanded' : activeInsertOption === 'showInsertPagebreakOptions' }">
+							<img src="pages/images/insert_pagebreak_button.png" width="80" height="80" />
 						</li>
-						<li class="insertOption" ng-class="{ 'expanded' : activeInsertOption === 'showInsertAnchorOptions' }">
-							<a ng-click="insertOptionChosen('showInsertAnchorOptions');">
-								<img src="pages/images/insert_anchor_button.png" width="80" height="80" />
-							</a>
+						<li ng-click="insertOptionChosen('showInsertAnchorOptions');" class="insertOption" ng-class="{ 'expanded' : activeInsertOption === 'showInsertAnchorOptions' }">
+							<img src="pages/images/insert_anchor_button.png" width="80" height="80" />
 						</li>
 						<li class="insertOptionProperties" ng-class="{ 'expanded' : activeInsertOption === 'showInsertPagebreakOptions' }">
 							<div>
@@ -328,15 +318,11 @@
 			<div class="menu-item-right inserts" ng-show="showFinalizeOptions">
 				<div class="menu-content">
 					<ul>
-						<li class="insertOption" ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeColophonOptions' }">
-							<a ng-click="finalizeOptionChosen('showFinalizeColophonOptions');">
-								colophon
-							</a>
+						<li ng-click="finalizeOptionChosen('showFinalizeColophonOptions');" class="insertOption" ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeColophonOptions' }">
+							colophon
 						</li>
-						<li class="insertOption" ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeCoverOptions' }">
-							<a ng-click="finalizeOptionChosen('showFinalizeCoverOptions');">
-								<img src="pages/images/insert_cover_button.png" width="80" height="80" />
-							</a>
+						<li ng-click="finalizeOptionChosen('showFinalizeCoverOptions');" class="insertOption" ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeCoverOptions' }">
+							<img src="pages/images/insert_cover_button.png" width="80" height="80" />
 						</li>
 						<li class="insertOptionProperties" ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeColophonOptions' }">
 							<span class="right-menu-button full-size right-menu-parameter-margin">
@@ -352,15 +338,11 @@
 							</div>
 						</li>
 
-						<li class="insertOption" ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeTocOptions' }">
-							<a ng-click="finalizeOptionChosen('showFinalizeTocOptions');">
-								toc
-							</a>
+						<li ng-click="finalizeOptionChosen('showFinalizeTocOptions');" class="insertOption" ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeTocOptions' }">
+							toc
 						</li>
-						<li class="insertOption" ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeTitlepageOptions' }">
-							<a ng-click="finalizeOptionChosen('showFinalizeTitlepageOptions');">
-								title page
-							</a>
+						<li ng-click="finalizeOptionChosen('showFinalizeTitlepageOptions');" class="insertOption" ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeTitlepageOptions' }">
+							title page
 						</li>
 						<li class="insertOptionProperties" ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeTocOptions' }">
 							<div class="right-menu-options">
