--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -139,14 +139,14 @@
 						<li class="insertOptionProperties" ng-class="{ 'expanded' : activeInsertOption === 'showInsertHyperlinkOptions' }">
 							<div class="left-menu-options">
 								<span class="left-menu-box inputfield full-size">
-									<input type="text" ng-model="linkAddress" placeholder="Address">
+									<input type="text" ng-model="linkAddress" placeholder="Target">
 								</span>
 								<span class="left-menu-box inputfield full-size left-menu-parameter-margin">
 									<input type="text" ng-model="linkText" placeholder="Text">
 								</span>
 								<span class="left-menu-box inputfield full-size left-menu-parameter-margin">
 									<select ng-model="linkAnchor" ng-options="anchor.text for anchor in toc">
-										<option value="">Select to link an anchor</option>
+										<option value="">Choose internal target</option>
 									</select>
 								</span>
 								<span class="left-menu-button full-size left-menu-parameter-margin">
