--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -395,7 +395,11 @@
 							<span class="statusfield" ng-class="{ 'text-saved': metaIsbnSaved }">Saved</span>
 						</span>
 						<span class="left-menu-box label left-menu-parameter-margin">Download options</span>
-						<span>Epub, PDF, Mobi</span>
+						<span class="left-menu-box label left-menu-parameter-margin left-menu-download">
+							<img class="download-icon" src="pages/images/compile_epub.png" ng-click="exportEpub()">
+<!--							<img class="download-icon" src="pages/images/compile_pdf.png" ng-click="exportPDF()">
+							<img class="download-icon" src="pages/images/compile_kindle.png" ng-click="exportKindle()">-->
+						</span>
 					</li>
 					</ul>
 				</div>
