--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -59,7 +59,7 @@
 						<p>+</p>
 					</div>
 					<ul>
-						<li ng-repeat="styleset in stylesets" class="typo" ng-class="{ 'open' : typoChildrenVisible == true }" ng-hide="styleset.archived || styleset.hidden">
+						<li ng-repeat="styleset in stylesets track by $index" class="typo" ng-class="{ 'open' : typoChildrenVisible == true }" ng-hide="styleset.archived || styleset.hidden">
 							<a class="styleset-options-show" ng-click="typoChildrenVisible = true; showStylesetOptions = true">
 								<div class="arrow"></div>
 							</a>
@@ -81,7 +81,7 @@
 							</div>
 
 							<ul ng-show="typoChildrenVisible || isDefaultStyleset(styleset)" class="typo-children">
-								<li ng-repeat="style in styleset.styles" id="{{style._id}}" ng-hide="style.archived || style.hidden" ng-selected="selectedStyle._id === style._id">
+								<li ng-repeat="style in styleset.styles track by $index" id="{{style._id}}" ng-hide="style.archived || style.hidden" ng-selected="selectedStyle._id === style._id">
 									<a class="style-options-show" ng-click="showStyleOptions = true">
 										<div class="arrow"></div>
 									</a>
