--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -87,7 +87,7 @@
 									</a>
 
 									{{style.tag === 'h1' && setStylesetStyling(styleset, style) || ''}}
-									<span class="style-isblock" ng-bind="isBlock(style)"></span>
+									<!--<span class="style-isblock" ng-bind="isBlock(style)"></span>-->
 
 									<div class="style-height" ng-hide="style.rename">
 										<span class="not-selectable" ng-style="getStyleStyling(style)" ng-click="applyStyle(styleset, style)">{{style.name}}</span>
@@ -95,9 +95,9 @@
 
 									<div class="style-copy-options" ng-show="copyCSS && selectedStyle._id === style._id">
 										<ul>
-											<li><a ng-click="saveAsCharStyle(styleset, style)">save as character style</a></li>
-											<li><a ng-click="saveAsBlockStyle(styleset, style)">save as block style</a></li>
-											<li><a ng-click="overwriteStyle(style)">overwrite style</a></li>
+											<!--<li><a ng-click="saveAsCharStyle(styleset, style)">save as character style</a></li>-->
+											<li><a ng-click="saveAsBlockStyle(styleset, style)">save as new</a></li>
+											<li><a ng-click="overwriteStyle(style)">overwrite</a></li>
 										</ul>
 									</div>
 
