fix for history.back #413 using location host instead

--- a/public/create/pages/project-space.html
+++ b/public/create/pages/project-space.html
@@ -6,7 +6,7 @@
 		<section class="section-unisquare" ng-class="{ 'white-bg' : showSettings}">
 			<div ng-hide="showSettings">
 				<div class="links">
-					<a onclick="history.back(-1)" class="frontpage-link">
+					<a href="http://{{frontpage}}" target="_self" class="frontpage-link">
 						<span class="arrow-left"></span><p>Frontpage</p>
 					</a>
 				</div>
