--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -4,17 +4,14 @@
 
 <div class="container">
 
-	<div id="menu-left-tabs" class="menu-left-tabs" ondragstart="return false;" ondrop="return false;">
-		<div class="menu-left-tab" ng-class="{ 'selectedTab' : showDocuments }" ng-click="showDocuments = !showDocuments; showTypo = false; showInsert = false;">
-			<div class="center"></div>
+	<div id="menu-left-tabs" class="menu-tabs left" ondragstart="return false;" ondrop="return false;">
+		<div class="menu-tab" ng-class="{ 'selectedTab' : showDocuments }" ng-click="showDocuments = !showDocuments; showTypo = false; showInsert = false;">
 			<img src="pages/images/documents.svg" width="20">
 		</div>
-		<div class="menu-left-tab" ng-class="{ 'selectedTab' : showTypo }" ng-click="showTypo = !showTypo; hideStyleEditor(); showDocuments = false; showInsert = false; focusEditor();">
-			<div class="center"></div>
+		<div class="menu-tab" ng-class="{ 'selectedTab' : showTypo }" ng-click="showTypo = !showTypo; hideStyleEditor(); showDocuments = false; showInsert = false; focusEditor();">
 			<img src="pages/images/typography.svg" width="20">
 		</div>
-		<div class="menu-left-tab" ng-class="{ 'selectedTab' : showInsert }" ng-click="showInsert = !showInsert; showDocuments = false; showTypo = false;">
-			<div class="center"></div>
+		<div class="menu-tab" ng-class="{ 'selectedTab' : showInsert }" ng-click="showInsert = !showInsert; showDocuments = false; showTypo = false;">
 			<img src="pages/images/insert.svg" width="20">
 		</div>
 	</div>
@@ -132,13 +129,13 @@
 				</li>-->
 				<li class="insertOptionProperties" ng-class="{ 'expanded' : activeInsertOption === 'showInsertHyperlinkOptions' }">
 					<div class="left-menu-options">
-						<span class="left-menu-box inputfield full-size">
+						<span class="menu-box inputfield full-size">
 							<input type="text" ng-model="linkAddress" placeholder="Target">
 						</span>
-						<span class="left-menu-box inputfield full-size left-menu-parameter-margin">
+						<span class="menu-box inputfield full-size left-menu-parameter-margin">
 							<input type="text" ng-model="linkText" placeholder="Text">
 						</span>
-						<span class="left-menu-box inputfield full-size left-menu-parameter-margin">
+						<span class="menu-box inputfield full-size left-menu-parameter-margin">
 							<select ng-model="linkAnchor" ng-options="anchor.text for anchor in toc">
 								<option value="">Choose internal target</option>
 							</select>
@@ -150,7 +147,7 @@
 				</li>
 				<li class="insertOptionProperties" ng-class="{ 'expanded' : activeInsertOption === 'showInsertImageOptions' }">
 					<div class="left-menu-options">
-						<span class="left-menu-box">
+						<span class="menu-box">
 							<input type="file" id="imagesInput" ng-file-select="onImageSelect($files)" accept="image/*" ng-hide="true">
 							<label for="imagesInput">Click to insert an image</label>
 						</span>
@@ -192,7 +189,7 @@
 							<span class="left-menu-button">
 								<img src="/create/ckeditor/skins/scripler/icons/image.png" title="Resize Image Set Procentages" />
 							</span>
-							<span class="left-menu-box inputfield">
+							<span class="menu-box inputfield">
 								<input type="text" value="45" class="show-info">
 								<span class="extra-info">&deg;</span>
 							</span>
@@ -201,7 +198,7 @@
 							<span class="left-menu-button">
 								<img src="/create/ckeditor/skins/scripler/icons/maximize.png" title="Resize Image Set Procentages" />
 							</span>
-							<span class="left-menu-box inputfield">
+							<span class="menu-box inputfield">
 								<input type="text" value="100" class="show-info">
 								<span class="extra-info">%</span>
 							</span>
@@ -232,14 +229,14 @@
 				<!--<li class="insertOption"><img src="pages/images/insert_cover_button.png" width="80" height="80"></li>-->
 				<li class="insertOptionProperties" ng-class="{ 'expanded' : activeInsertOption === 'showInsertAnchorOptions' }">
 					<div class="left-menu-options">
-						<span class="left-menu-box inputfield">
+						<span class="menu-box inputfield">
 							<input type="text" ng-model="anchorName" placeholder="Anchor name">
 						</span>
 						<span class="left-menu-button">
 							<a ng-click="insertNewAnchor();">+</a>
 						</span>
 
-						<span class="left-menu-box left-menu-parameter-margin">
+						<span class="menu-box left-menu-parameter-margin">
 							<span class="option" ng-repeat="tocs in toc"><a ng-click="anchorScrollTo(tocs);">{{tocs.text}}</a></span>
 						</span>
 					</div>
@@ -259,7 +256,7 @@
 			<a ng-click="showStyleEditor()" ng-class="{ 'open' : styleEditorVisible }">style editor</a>
 		</div>
 
-		<div id="menu-left-content-options" class="menu-left-options" ng-show="showDocuments" ng-class="{ 'open' : showNewOptions || showImportOptions || showBottomOptions }">
+		<div id="menu-left-content-options" class="menu-options" ng-show="showDocuments" ng-class="{ 'open' : showNewOptions || showImportOptions || showBottomOptions }">
 			<div class="options-bottom-box">
 				<div ng-show="showNewOptions">
 					<a ng-click="addProjectDocument()">New Document</a><br>
@@ -293,13 +290,11 @@
 		<textarea ck-editor="" ng-model="documentSelected.text" class="form-control" id="bodyeditor"></textarea>
 	</div>
 
-	<div id="menu-right-tabs" class="menu-right-tabs" ondragstart="return false;" ondrop="return false;">
-		<div class="menu-right-tab" ng-class="{ 'selectedTab' : showFinalizeOptions }" ng-click="showFinalizeOptions = !showFinalizeOptions; showOutput = false;">
-			<div class="center"></div>
+	<div id="menu-right-tabs" class="menu-tabs right" ondragstart="return false;" ondrop="return false;">
+		<div class="menu-tab" ng-class="{ 'selectedTab' : showFinalizeOptions }" ng-click="showFinalizeOptions = !showFinalizeOptions; showOutput = false;">
 			<img src="pages/images/finalize.svg" width="20">
 		</div>
-		<div class="menu-right-tab output" ng-class="{ 'selectedTab' : showOutput }" ng-click="showOutput = !showOutput; showFinalizeOptions = false;">
-			<div class="center"></div>
+		<div class="menu-tab output" ng-class="{ 'selectedTab' : showOutput }" ng-click="showOutput = !showOutput; showFinalizeOptions = false;">
 			<img src="pages/images/output.svg" width="20">
 		</div>
 	</div>
@@ -314,7 +309,7 @@
 				</li>
 				<li class="insertOptionProperties" ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeCoverOptions' }">
 					<div class="right-menu-options">
-						<span class="right-menu-box">
+						<span class="menu-box">
 							<input type="file" id="coverInput" ng-file-select="onCoverSelect($files)" accept="image/*" ng-hide="true">
 							<label for="coverInput">Create a cover</label>
 						</span>
@@ -336,7 +331,7 @@
 				</li>
 				<li class="insertOptionProperties" ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeTocOptions' }">
 					<div class="right-menu-options">
-						<span class="right-menu-box right-menu-parameter-margin">
+						<span class="menu-box right-menu-parameter-margin">
 							<span class="option" ng-repeat="tocs in toc"><a ng-click="anchorScrollTo(tocs);">{{tocs.text}}</a></span>
 						</span>
 						<span class="right-menu-button full-size right-menu-parameter-margin">
@@ -354,36 +349,36 @@
 		<div class="menu-item-right output" ng-show="showOutput">
 			<ul>
 			<li class="outputOptionProperties">
-				<span class="left-menu-box label">Title</span>
-				<span class="left-menu-box inputfield full-size" ng-class="{ 'text-saved': metaTitleSaved }">
+				<span class="menu-box label">Title</span>
+				<span class="menu-box inputfield full-size" ng-class="{ 'text-saved': metaTitleSaved }">
 					<input type="text" name="output_title" id="output_title" value="{{project.metadata.title}}" ng-model="project.metadata.title"  />
 					<span class="statusfield" ng-class="{ 'text-saved': metaTitleSaved }">Saved</span>
 					<span ng-bind="{{project.metadata.title}}">{{project.metadata.title}}</span>
 				</span>
-				<span class="left-menu-box label left-menu-parameter-margin">Author</span>
-				<span class="left-menu-box inputfield full-size" ng-class="{ 'text-saved': metaAuthorsSaved }">
+				<span class="menu-box label left-menu-parameter-margin">Author</span>
+				<span class="menu-box inputfield full-size" ng-class="{ 'text-saved': metaAuthorsSaved }">
 					<input type="text" name="output_author" id="output_author" value="{{project.metadata.authors}}" ng-model="project.metadata.authors"  />
 					<span class="statusfield" ng-class="{ 'text-saved': metaAuthorsSaved }">Saved</span>
 				</span>
-				<span class="left-menu-box label left-menu-parameter-margin">Language</span>
-				<span class="left-menu-box inputfield full-size" ng-class="{ 'text-saved': metaLanguageSaved }">
+				<span class="menu-box label left-menu-parameter-margin">Language</span>
+				<span class="menu-box inputfield full-size" ng-class="{ 'text-saved': metaLanguageSaved }">
 					<input type="text" name="output_language" id="output_language" value="{{project.metadata.language}}" ng-model="project.metadata.language" />
 					<span class="statusfield" ng-class="{ 'text-saved': metaLanguageSaved }">Saved</span>
 				</span>
-				<span class="left-menu-box label left-menu-parameter-margin">Description</span>
-				<span class="left-menu-box inputfield full-size-text" ng-class="{ 'text-saved': metaDescriptionSaved }">
+				<span class="menu-box label left-menu-parameter-margin">Description</span>
+				<span class="menu-box inputfield full-size-text" ng-class="{ 'text-saved': metaDescriptionSaved }">
 					<textarea name="output_description" id="output_description" ng-model="project.metadata.description" />{{project.metadata.description}}</textarea>
 					<span class="statusfield" ng-class="{ 'text-saved': metaDescriptionSaved }">Saved</span>
 				</span>
-				<span class="left-menu-box label left-menu-parameter-margin">Unique identifier / ISBN</span>
-				<span class="left-menu-box inputfield full-size" ng-class="{ 'text-saved': metaIsbnSaved }">
+				<span class="menu-box label left-menu-parameter-margin">Unique identifier / ISBN</span>
+				<span class="menu-box inputfield full-size" ng-class="{ 'text-saved': metaIsbnSaved }">
 					<input type="text" name="output_unique" id="output_unique" value="{{project.metadata.isbn}}" ng-model="project.metadata.isbn" />
 					<span class="statusfield" ng-class="{ 'text-saved': metaIsbnSaved }">Saved</span>
 				</span>
 			</li>
 			<li class="outputOptionProperties outputOptionDownload">
-				<span class="left-menu-box label">Download options</span>
-				<span class="left-menu-box label left-menu-parameter-margin left-menu-download">
+				<span class="menu-box label text-align-center">Download options</span>
+				<span class="menu-box label left-menu-parameter-margin left-menu-download">
 					<img class="download-icon" src="pages/images/compile_epub.png" ng-click="exportEpub()">
 				</span>
 			</li>
