--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -302,10 +302,10 @@
 		<div class="menu-item-right inserts" data-ng-show="showFinalizeOptions">
 			<ul>
 				<li data-ng-click="finalizeOptionChosen('showFinalizeCoverOptions');" class="insertOption first" data-ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeCoverOptions' }">
-					<img src="pages/images/insert_cover.png" />
+					<img src="pages/images/insert_cover.png" alt="Cover" title="Cover" />
 				</li>
 				<li data-ng-click="finalizeOptionChosen('showFinalizeTitlepageOptions');" class="insertOption" data-ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeTitlepageOptions' }">
-					<img src="pages/images/insert_titlepage.png" />
+					<img src="pages/images/insert_titlepage.png" alt="Titlepage" title="Titlepage" />
 				</li>
 				<li class="insertOptionProperties" data-ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeCoverOptions' }">
 					<div class="right-menu-options">
@@ -324,10 +324,10 @@
 				</li>
 
 				<li data-ng-click="finalizeOptionChosen('showFinalizeTocOptions');" class="insertOption first" data-ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeTocOptions' }">
-					<img src="pages/images/insert_toc.png" />
+					<img src="pages/images/insert_toc.png" alt="Table of Contents" title="Table of Contents" />
 				</li>
 				<li data-ng-click="finalizeOptionChosen('showFinalizeColophonOptions');" class="insertOption" data-ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeColophonOptions' }">
-					<img src="pages/images/insert_colophon.png" />
+					<img src="pages/images/insert_colophon.png" alt="Colophon" title="Colophon" />
 				</li>
 				<li class="insertOptionProperties" data-ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeTocOptions' }">
 					<div class="right-menu-options">
