inserted alt and title for insert menu as #445 described for the finalize menu

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -112,13 +112,13 @@
 		<div class="menu-item-left inserts" data-ng-show="showInsert">
 			<ul>
 				<!--<li data-ng-click="insertOptionChosen('showInsertBoxOptions');" class="insertOption" data-ng-class="{ 'expanded' : activeInsertOption === 'showInsertBoxOptions' }">
-					<img src="pages/images/insert_box_button.png" width="80" height="80" />
+					<img src="pages/images/insert_box_button.png" alt="" title="" />
 				</li>-->
 				<li data-ng-click="insertOptionChosen('showInsertHyperlinkOptions');" class="insertOption first" data-ng-class="{ 'expanded' : activeInsertOption === 'showInsertHyperlinkOptions' }">
-					<img src="pages/images/insert_hyperlink_button.png" width="80" height="80" />
+					<img src="pages/images/insert_hyperlink_button.png" alt="Hyperlink" title="Hyperlink" />
 				</li>
 				<li data-ng-click="insertOptionChosen('showInsertImageOptions');" class="insertOption" data-ng-class="{ 'expanded' : activeInsertOption === 'showInsertImageOptions' }">
-					<img src="pages/images/insert_image_button.png" width="80" height="80" />
+					<img src="pages/images/insert_image_button.png" alt="Image" title="Image" />
 				</li>
 				<!--<li class="insertOptionProperties" data-ng-class="{ 'expanded' : activeInsertOption === 'showInsertBoxOptions' }">
 					line properties
@@ -207,10 +207,10 @@
 				</li>
 
 				<li data-ng-click="insertOptionChosen('showInsertPagebreakOptions');" class="insertOption first" data-ng-class="{ 'expanded' : activeInsertOption === 'showInsertPagebreakOptions' }">
-					<img src="pages/images/insert_pagebreak_button.png" width="80" height="80" />
+					<img src="pages/images/insert_pagebreak_button.png" alt="Pagebreak" title="Pagebreak" />
 				</li>
 				<li data-ng-click="insertOptionChosen('showInsertAnchorOptions');" class="insertOption" data-ng-class="{ 'expanded' : activeInsertOption === 'showInsertAnchorOptions' }">
-					<img src="pages/images/insert_anchor_button.png" width="80" height="80" />
+					<img src="pages/images/insert_anchor_button.png" alt="Anchor" title="Anchor" />
 				</li>
 				<li class="insertOptionProperties" data-ng-class="{ 'expanded' : activeInsertOption === 'showInsertPagebreakOptions' }">
 					<div>
