change to give the document the right name and only show names of documents

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -28,7 +28,7 @@
 
 					<p data-ng-hide="editingProjectDocumentTitle">
 						<a class="projectDocument-link" data-ng-click="projectDocumentChosen(projectDocument)">
-							{{projectDocument.type || projectDocument.name}}
+							{{projectDocument.name}}
 						</a>
 					</p>
 
