--- a/public/create/index.html
+++ b/public/create/index.html
@@ -7,9 +7,9 @@
 
 	<script type="text/javascript" src="scripts/angular-file-upload-html5-shim.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.3/webfont.js"></script>
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.js"></script>
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-route.js"></script>
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-sanitize.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.1/angular.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.1/angular-route.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.1/angular-sanitize.js"></script>
 	<script type="text/javascript" src="scripts/angular-local-storage.min.js"></script>
 	<script type="text/javascript" src="scripts/angular-file-upload.min.js"></script>
 	<script type="text/javascript" src="scripts/html5-sortable.js"></script>
