--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -351,28 +351,27 @@
 			<li class="outputOptionProperties">
 				<span class="menu-box label">Title</span>
 				<span class="menu-box inputfield full-size" data-ng-class="{ 'text-saved': metaTitleSaved }">
-					<input type="text" name="output_title" id="output_title" value="{{project.metadata.title}}" data-ng-model="project.metadata.title"  />
+					<input type="text" name="output_title" id="output_title" data-ng-model="project.metadata.title" data-ng-model-options="{ debounce: 2000 }"  />
 					<span class="statusfield" data-ng-class="{ 'text-saved': metaTitleSaved }">Saved</span>
-					<span data-ng-bind="{{project.metadata.title}}">{{project.metadata.title}}</span>
 				</span>
 				<span class="menu-box label left-menu-parameter-margin">Author</span>
 				<span class="menu-box inputfield full-size" data-ng-class="{ 'text-saved': metaAuthorsSaved }">
-					<input type="text" name="output_author" id="output_author" value="{{project.metadata.authors}}" data-ng-model="project.metadata.authors"  />
+					<input type="text" name="output_author" id="output_author" data-ng-model="project.metadata.authors" data-ng-model-options="{ debounce: 2000 }" />
 					<span class="statusfield" data-ng-class="{ 'text-saved': metaAuthorsSaved }">Saved</span>
 				</span>
 				<span class="menu-box label left-menu-parameter-margin">Language</span>
 				<span class="menu-box inputfield full-size" data-ng-class="{ 'text-saved': metaLanguageSaved }">
-					<input type="text" name="output_language" id="output_language" value="{{project.metadata.language}}" data-ng-model="project.metadata.language" />
+					<input type="text" name="output_language" id="output_language" data-ng-model="project.metadata.language" data-ng-model-options="{ debounce: 2000 }" />
 					<span class="statusfield" data-ng-class="{ 'text-saved': metaLanguageSaved }">Saved</span>
 				</span>
 				<span class="menu-box label left-menu-parameter-margin">Description</span>
 				<span class="menu-box inputfield full-size-text" data-ng-class="{ 'text-saved': metaDescriptionSaved }">
-					<textarea name="output_description" id="output_description" data-ng-model="project.metadata.description" />{{project.metadata.description}}</textarea>
+					<textarea name="output_description" id="output_description" data-ng-model="project.metadata.description" data-ng-model-options="{ debounce: 2000 }" /></textarea>
 					<span class="statusfield" data-ng-class="{ 'text-saved': metaDescriptionSaved }">Saved</span>
 				</span>
 				<span class="menu-box label left-menu-parameter-margin">Unique identifier / ISBN</span>
 				<span class="menu-box inputfield full-size" data-ng-class="{ 'text-saved': metaIsbnSaved }">
-					<input type="text" name="output_unique" id="output_unique" value="{{project.metadata.isbn}}" data-ng-model="project.metadata.isbn" />
+					<input type="text" name="output_unique" id="output_unique" data-ng-model="project.metadata.isbn" data-ng-model-options="{ debounce: 2000 }" />
 					<span class="statusfield" data-ng-class="{ 'text-saved': metaIsbnSaved }">Saved</span>
 				</span>
 			</li>
