Implemented review comments

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 						<input name="Login" type="submit" value="Login" class="button login" id="login-button" />
 						<div id="login-extras">
 							<div><a id="forgot-password" href="#">Forgot password?</a></div>
-							<div class="clearfix" id="remember-me-box"><input type="checkbox" name="remember" id="remember" /><label for="remember">Remember login?</label></div>
+							<div class="clearfix" id="remember-me-box"><input type="checkbox" name="remember" id="remember" /><label for="remember">Keep me logged in?</label></div>
 						</div>
 					</div>
 				</form>
