--- a/public/index.html
+++ b/public/index.html
@@ -241,6 +241,7 @@
 	<!--<![endif]-->
 
 	<script src="js/frontpage.jquery.js"></script>
+	<script src="create/scripts/utils-shared.js"></script>
 
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
