Fixed demo mode EXCEPT for #294. Demo mode works as follows:
* Create a demo user for the user's session when the user clicks "Go" on the frontpage (or rather, when the "login:failed" event is caught on the project space page).
* For a demo user, in project space, hide the "Settings" link in the Unisquare and the (green) "Verify your email" bar.
* Convert the demo user to a real user when user clicks "Register" (by calling `PUT /user/:id`, changing first name, last name, email (and the demo flag)).
* "Real", existing users who accidently (or otherwise) clicks "Go" instead of "Login" on the front page, can go back to the front page to log in.

Also:
* Implemented ability to clean up unused (demo) users: every time a user, demo or "real", makes a "significant" change, currently defined as changing a project or document, a "last action date" attribute is set on the user.
* Removed the "Demo Title" project per request from POs (feedback from the alpha test) (might be reintroduced with the "Tour of Scripler" task).
* Removed local storage: revisit when implementing some form of offline mode.
* Allow users to only register with first name.
* Don't send out any emails to demo users.
* Renamed: "Publication" -> "Project" and "validate" -> "verify".
* Various minor linguistic improvements in register bar messages.
* Fixed express "deprecated" warning for res.send().

--- a/public/create/pages/project-space.html
+++ b/public/create/pages/project-space.html
@@ -13,7 +13,7 @@
 				<div class="logo-box">
 					<img class="logo" src="/images/logo.png">
 				</div>
-				<div class="uni-bottom-box" data-ng-show="user._id">
+				<div class="uni-bottom-box" data-ng-show="user._id && !user.isDemo">
 					<div class="user-box">
 						<img class="user-image" src="pages/images/profilepicture.png" height="50" width="50">
 						<div class="user-text">
@@ -27,7 +27,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="user-settings" data-ng-show="showSettings">
+			<div class="user-settings" data-ng-show="showSettings && !user.isDemo">
 				<div class="user-box">
 						<img class="user-image" src="pages/images/profilepicture.png" height="100" width="100">
 						<div class="settings-text">
@@ -63,37 +63,37 @@
 			</div>
 		</section>
 
-		<section class="section-publications">
-			<div class="publication new" data-ng-click="addPublication(publication)">
+		<section class="section-projects">
+			<div class="project new" data-ng-click="addProject(project)">
 				<p>+</p>
 			</div>
 
-			<div class="publication" data-ng-animate="'animate'" data-ng-class="{ 'archived' : publication.archived }" data-ng-hide="publication.archived && !user.showArchived" data-ng-repeat="publication in publications track by $index">
-				<a class="publication-options-show" data-ng-click="showPublicationOptions = true">
+			<div class="project" data-ng-animate="'animate'" data-ng-class="{ 'archived' : project.archived }" data-ng-hide="project.archived && !user.showArchived" data-ng-repeat="project in projects track by $index">
+				<a class="project-options-show" data-ng-click="showProjectOptions = true">
 					<div class="arrow"></div>
 				</a>
-				<!--<p data-ng-hide="editingPublicationTitle" data-ng-click="editingPublicationTitle = true;">-->
-				<p data-ng-hide="editingPublicationTitle">
-					<a href="#/project?pid={{publication._id}}" class="publication-link">{{publication.name}}</a>
+				<!--<p data-ng-hide="editingProjectTitle" data-ng-click="editingProjectTitle = true;">-->
+				<p data-ng-hide="editingProjectTitle">
+					<a href="#/project?pid={{project._id}}" class="project-link">{{project.name}}</a>
 				</p>
 
-				<form data-ng-show="editingPublicationTitle">
+				<form data-ng-show="editingProjectTitle">
 				<p>
-					<!--<input type="text" data-ng-model="publication.name" placeholder="publication title" focus-on="!!editingPublicationTitle" />-->
-					<textarea id="rename" data-ng-model="publication.name" placeholder="publication title" focus-on="!!editingPublicationTitle" on-enter="editingPublicationTitle = false; renamePublication(publication);"></textarea>
+					<!--<input type="text" data-ng-model="project.name" placeholder="project title" focus-on="!!editingProjectTitle" />-->
+					<textarea id="rename" data-ng-model="project.name" placeholder="project title" focus-on="!!editingProjectTitle" on-enter="editingProjectTitle = false; renameProject(project);"></textarea>
 				</p>
 				</form>
 
-				<div class="publication-options" data-ng-show="showPublicationOptions">
-					<div class="publication-options-header">Publication Options</div>
-					<div class="publication-options-hide" data-ng-click="showPublicationOptions = false;" title="Close Options">x</div>
-					<div class="publication-options-menupoint" data-ng-click="editingPublicationTitle = true; showPublicationOptions = false;">rename</div>
-					<div class="publication-options-menupoint" data-ng-click="copyPublication(publication); showPublicationOptions = false;">copy</div>
-					<div class="publication-options-menupoint" data-ng-click="archivePublication(publication); showPublicationOptions = false;">archive</div>
-					<div class="publication-options-menupoint" data-ng-click="unarchivePublication(publication); showPublicationOptions = false;">unarchive</div>
-					<div class="publication-options-dates" data-ng-show="publication.created && publication.changed">
-						<div>Created Date: </div><div class="dates">{{publication.created | date:'yyyy-MM-dd HH:mm'}}</div>
-						<div>Last Changed: </div><div class="dates">{{publication.modified | date:'yyyy-MM-dd HH:mm'}}</div>
+				<div class="project-options" data-ng-show="showProjectOptions">
+					<div class="project-options-header">Project Options</div>
+					<div class="project-options-hide" data-ng-click="showProjectOptions = false;" title="Close Options">x</div>
+					<div class="project-options-menupoint" data-ng-click="editingProjectTitle = true; showProjectOptions = false;">rename</div>
+					<div class="project-options-menupoint" data-ng-click="copyProject(project); showProjectOptions = false;">copy</div>
+					<div class="project-options-menupoint" data-ng-click="archiveProject(project); showProjectOptions = false;">archive</div>
+					<div class="project-options-menupoint" data-ng-click="unarchiveProject(project); showProjectOptions = false;">unarchive</div>
+					<div class="project-options-dates" data-ng-show="project.created && project.changed">
+						<div>Created Date: </div><div class="dates">{{project.created | date:'yyyy-MM-dd HH:mm'}}</div>
+						<div>Last Changed: </div><div class="dates">{{project.modified | date:'yyyy-MM-dd HH:mm'}}</div>
 					</div>
 				</div>
 			</div>
